# win32-mcp-server

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PLANNING.md  PUBLISHING.md  README.md  SECURITY.md  extension.js  mcp.json  package.json  pyproject.toml  server.py  setup.py  test_e2e.py  test_functional.py  test_new_features.py  vscode-extension-README.md  win32-mcp-inspector-1.0.0.vsix
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml
tests/: test_core_safety.py
win32_mcp_server/: __init__.py  __main__.py  config.py  registry.py  server.py
win32_mcp_server/tools/: __init__.py  capture.py  clipboard.py  grid.py  keyboard.py  mouse.py  ocr.py  process.py  smart.py  uia.py  window.py
win32_mcp_server/utils/: __init__.py  args.py  coordinates.py  errors.py  execution.py  imaging.py  security.py  window_match.py
